objects/Incident__c.object
<CustomObject>
    <fields>
        <fullName>Severity_of_incident_Behaviour__c</fullName>
        <label>Severity of incident</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>4 - Minor</fullName>
                </value>
                <value>
                    <fullName>3 - Serious</fullName>
                </value>
                <value>
                    <fullName>2 - Very serious</fullName>
                </value>
                <value>
                    <fullName>1 - Crisis</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Severity_of_incident__c</fullName>
        <inlineHelpText>Enter a value 1 to 5 to indicate the severity of the incident, where 1 is low severity and 5 is high</inlineHelpText>
        <label>Severity of incident</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Severity_of_incident_health__c</fullName>
        <inlineHelpText>Enter a value 4 to 1 to indicate the severity of the incident, where 4 is low severity and 1 is very high severity.</inlineHelpText>
        <label>Severity of incident</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>4 – Minor: e.g. Sprains, abrasions, bruising</fullName>
                </value>
                <value>
                    <fullName>3 – Serious: e.g. Fractured limb</fullName>
                </value>
                <value>
                    <fullName>2 – Very serious: e.g. Life-changing injury</fullName>
                </value>
                <value>
                    <fullName>1 – Crisis: e.g. Fatality on the programme</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Severity_of_incident_safeguarding__c</fullName>
        <inlineHelpText>Enter a value 4 to 1 to indicate the severity of the incident, where 4 is low severity and 1 is very high severity.</inlineHelpText>
        <label>Severity of incident</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>4 – Minor: e.g. No immediate risk posed</fullName>
                </value>
                <value>
                    <fullName>3 – Serious: e.g. Risk posed upon leaving programme</fullName>
                </value>
                <value>
                    <fullName>2 – Very serious: e.g. Allegation against staff</fullName>
                </value>
                <value>
                    <fullName>1 – Crisis: e.g. Sexual assault on programme</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SuM_Email__c</fullName>
        <label>SuM Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>SuM_SPM_Case_closed__c</fullName>
        <label>SPM/DSPM: Case closed</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SuM_SPM_notes__c</fullName>
        <label>SuM/SPM notes</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Support_Level_of_YP__c</fullName>
        <label>Support Level of YP</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Support_given_to_wave_staff_face_to_face__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Support given to wave staff face-to-face</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Support_to__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Support to access universal services</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Support_to_access_specialised_services__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Support to access specialised services</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Support_to_access_tier_3_MH_Services__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Support to access tier 3 MH services</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Supported_YP_PG_to_access_Level_2_Ment__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Support to access tier 2 MH services</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Sys_Is_Record_Older_Than_7_Days__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Sys - Is Record Older Than 7 Days?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Sys_temp_trigger__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Sys: temp trigger</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Team__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Please ensure you include both cluster and team, e.g. HEAL A 5 Edwards.</inlineHelpText>
        <label>Team</label>
        <referenceTo>Team__c</referenceTo>
        <relationshipLabel>Incidents</relationshipLabel>
        <relationshipName>Incidents</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Those_directly_affected_by_the_incident__c</fullName>
        <inlineHelpText>Were other young people / staff affected but not injured?</inlineHelpText>
        <label>Those directly affected by the incident</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Time_of_incident__c</fullName>
        <label>Time of incident</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Time_that_PL_was_informed__c</fullName>
        <label>Time that PL was informed</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Time_that_PM_was_informed__c</fullName>
        <label>Time that PM was informed</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type_of_Accident__c</fullName>
        <label>Type of Accident</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Exposure to fire or explosion</fullName>
                </value>
                <value>
                    <fullName>Exposure to harmful substance</fullName>
                </value>
                <value>
                    <fullName>Contact with moving machinery</fullName>
                </value>
                <value>
                    <fullName>Struck by moving object or vehicle</fullName>
                </value>
                <value>
                    <fullName>Struck something fixed/stationary</fullName>
                </value>
                <value>
                    <fullName>Injured while handling/lifting/carrying</fullName>
                </value>
                <value>
                    <fullName>Slips, trips or fall on same level</fullName>
                </value>
                <value>
                    <fullName>Falls from height</fullName>
                </value>
                <value>
                    <fullName>Drowning/ suffocation</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Type_of_Injury__c</fullName>
        <inlineHelpText>Enter as many items as you feel apply.</inlineHelpText>
        <label>Type of Injury</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Fracture/dislocation</fullName>
                </value>
                <value>
                    <fullName>Cuts/open wound</fullName>
                </value>
                <value>
                    <fullName>Bruise</fullName>
                </value>
                <value>
                    <fullName>Burn</fullName>
                </value>
                <value>
                    <fullName>Poisoning/gassing</fullName>
                </value>
                <value>
                    <fullName>Sprain/strain</fullName>
                </value>
                <value>
                    <fullName>Illness (incl. pre existing conditions)</fullName>
                </value>
                <value>
                    <fullName>Damage to property</fullName>
                </value>
                <value>
                    <fullName>Near miss</fullName>
                </value>
                <value>
                    <fullName>Bone/Muscle injury</fullName>
                </value>
                <value>
                    <fullName>Skin surface injury e.g. cut/bruise/rash</fullName>
                </value>
                <value>
                    <fullName>Vomiting/Diarrohea</fullName>
                </value>
                <value>
                    <fullName>Psychological</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Type_of_incident__c</fullName>
        <label>Type of incident</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Lost medical form(s)</fullName>
                </value>
                <value>
                    <fullName>Behaviour (whole wave)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Wave__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Wave</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Wave__c.RecordType.Name</field>
                <operation>equals</operation>
                <value>2016</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Wave__c</referenceTo>
        <relationshipLabel>Incidents</relationshipLabel>
        <relationshipName>Incidents</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Wave_selection_status_updated__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Wave selection status updated?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Were_the_emergency_services_called__c</fullName>
        <inlineHelpText>If the emergency services were called, the severity of the incident must be set to 2 or 3.</inlineHelpText>
        <label>Were the emergency services called?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>What_was_lost__c</fullName>
        <label>What was lost</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Individual Medical Form</fullName>
                </value>
                <value>
                    <fullName>Team Medical Forms</fullName>
                </value>
                <value>
                    <fullName>Wave Medical Forms</fullName>
                </value>
                <value>
                    <fullName>Team Register</fullName>
                </value>
                <value>
                    <fullName>Wave Register</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Who_informed_parents__c</fullName>
        <label>Who informed PG?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>APM</fullName>
                </value>
                <value>
                    <fullName>PA/ PM</fullName>
                </value>
                <value>
                    <fullName>SuM/ SPM</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Zone_Text_Hidden__c</fullName>
        <label>Zone (Text &amp; Hidden)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zone__c</fullName>
        <formula>Contact__r.School_s_zone__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Zone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>any_other_categories__c</fullName>
        <inlineHelpText>Select any other incident categories that this incident is relevant to.</inlineHelpText>
        <label>Does this fall into any other categories</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Behaviour</fullName>
                </value>
                <value>
                    <fullName>Damage to property</fullName>
                </value>
                <value>
                    <fullName>Data loss</fullName>
                </value>
                <value>
                    <fullName>Disclosures and safeguarding</fullName>
                </value>
                <value>
                    <fullName>Health and safety</fullName>
                </value>
                <value>
                    <fullName>Misc incident</fullName>
                </value>
                <value>
                    <fullName>Staff health</fullName>
                </value>
                <value>
                    <fullName>Started but left</fullName>
                </value>
                <value>
                    <fullName>TCS - behaviour (card awarded)</fullName>
                </value>
                <value>
                    <fullName>TCS - damage to property</fullName>
                </value>
                <value>
                    <fullName>TCS - health</fullName>
                </value>
                <value>
                    <fullName>Whole wave incident</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Incident</label>
    <listViews>
        <fullName>All_red_cards_jo</fullName>
        <columns>Wave_selection_status_updated__c</columns>
        <columns>Wave__c</columns>
        <columns>Red_card_awarded__c</columns>
        <columns>Card_type__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Card_type__c</field>
            <operation>equals</operation>
            <value>Red (2nd yellow awarded),Red</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Incident__c.Behaviour</value>
        </filters>
        <label>All red cards jo</label>
        <sharedTo>
            <group>Central_Comms_Admins</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All_started_but_left</fullName>
        <columns>Wave__c</columns>
        <columns>Wave_selection_status_updated__c</columns>
        <columns>Date_left_the_programme__c</columns>
        <columns>Reason_for_leaving__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Incident__c.Started_but_left</value>
        </filters>
        <filters>
            <field>Wave_selection_status_updated__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>All started but left</label>
        <sharedTo>
            <group>Central_Comms</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>CAS_W10_Incidents</fullName>
        <columns>Description_of_incident__c</columns>
        <columns>Name_of_person_who_recorded_this__c</columns>
        <columns>NAME</columns>
        <columns>OBJECT_ID</columns>
        <columns>Dangerous_accident__c</columns>
        <columns>Date_of_incident__c</columns>
        <columns>Incident_notes__c</columns>
        <columns>Were_the_emergency_services_called__c</columns>
        <columns>Type_of_Injury__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Wave__c</field>
            <operation>equals</operation>
            <value>CAS 10</value>
        </filters>
        <label>CAS W10 Incidents</label>
        <sharedTo>
            <group>CHIW</group>
            <group>ProgSPT</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>CHIW_W11_Incidents</fullName>
        <columns>Description_of_incident__c</columns>
        <columns>Name_of_person_who_recorded_this__c</columns>
        <columns>NAME</columns>
        <columns>OBJECT_ID</columns>
        <columns>Dangerous_accident__c</columns>
        <columns>Date_of_incident__c</columns>
        <columns>Incident_notes__c</columns>
        <columns>Were_the_emergency_services_called__c</columns>
        <columns>Type_of_Injury__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Wave__c</field>
            <operation>equals</operation>
            <value>CHIW 11</value>
        </filters>
        <label>CHIW W11 Incidents</label>
        <sharedTo>
            <group>CHIW</group>
            <group>ProgSPT</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>CHIW_W12_Incidents</fullName>
        <columns>Description_of_incident__c</columns>
        <columns>Name_of_person_who_recorded_this__c</columns>
        <columns>NAME</columns>
        <columns>OBJECT_ID</columns>
        <columns>Dangerous_accident__c</columns>
        <columns>Date_of_incident__c</columns>
        <columns>Incident_notes__c</columns>
        <columns>Were_the_emergency_services_called__c</columns>
        <columns>Type_of_Injury__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Wave__c</field>
            <operation>equals</operation>
            <value>CHIW 12</value>
        </filters>
        <label>CHIW W12 Incidents</label>
        <sharedTo>
            <group>CHIW</group>
            <group>ProgSPT</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>CHIW_W1_Incidents</fullName>
        <columns>Description_of_incident__c</columns>
        <columns>Name_of_person_who_recorded_this__c</columns>
        <columns>NAME</columns>
        <columns>OBJECT_ID</columns>
        <columns>Dangerous_accident__c</columns>
        <columns>Date_of_incident__c</columns>
        <columns>Incident_notes__c</columns>
        <columns>Were_the_emergency_services_called__c</columns>
        <columns>Type_of_Injury__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Wave__c</field>
            <operation>equals</operation>
            <value>CaW 1</value>
        </filters>
        <label>CHIW W1 Incidents</label>
        <sharedTo>
            <group>ProgCaW2013</group>
            <group>ProgSPT</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>CHIW_W2_Incidents</fullName>
        <columns>Description_of_incident__c</columns>
        <columns>Name_of_person_who_recorded_this__c</columns>
        <columns>NAME</columns>
        <columns>OBJECT_ID</columns>
        <columns>Dangerous_accident__c</columns>
        <columns>Date_of_incident__c</columns>
        <columns>Incident_notes__c</columns>
        <columns>Were_the_emergency_services_called__c</columns>
        <columns>Type_of_Injury__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Wave__c</field>
            <operation>equals</operation>
            <value>CHIW 2</value>
        </filters>
        <label>CHIW W2 Incidents</label>
        <sharedTo>
            <group>CHIW</group>
            <group>ProgSPT</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>CHIW_W3_Incidents</fullName>
        <columns>Description_of_incident__c</columns>
        <columns>Name_of_person_who_recorded_this__c</columns>
        <columns>NAME</columns>
        <columns>OBJECT_ID</columns>
        <columns>Dangerous_accident__c</columns>
        <columns>Date_of_incident__c</columns>
        <columns>Incident_notes__c</columns>
        <columns>Were_the_emergency_services_called__c</columns>
        <columns>Type_of_Injury__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Wave__c</field>
            <operation>equals</operation>
            <value>CHIW 3</value>
        </filters>
        <label>CHIW W3 Incidents</label>
        <sharedTo>
            <group>CHIW</group>
            <group>ProgSPT</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>CHIW_W4_Incidents</fullName>
        <columns>Description_of_incident__c</columns>
        <columns>Name_of_person_who_recorded_this__c</columns>
        <columns>NAME</columns>
        <columns>OBJECT_ID</columns>
        <columns>Dangerous_accident__c</columns>
        <columns>Date_of_incident__c</columns>
        <columns>Incident_notes__c</columns>
        <columns>Were_the_emergency_services_called__c</columns>
        <columns>Type_of_Injury__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Wave__c</field>
            <operation>equals</operation>
            <value>CHIW 4</value>
        </filters>
        <label>CHIW W4 Incidents</label>
        <sharedTo>
            <group>CHIW</group>
            <group>ProgSPT</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>CHIW_W5_Incidents</fullName>
        <columns>Description_of_incident__c</columns>
        <columns>Name_of_person_who_recorded_this__c</columns>
        <columns>NAME</columns>
        <columns>OBJECT_ID</columns>
        <columns>Dangerous_accident__c</columns>
        <columns>Date_of_incident__c</columns>
        <columns>Incident_notes__c</columns>
        <columns>Were_the_emergency_services_called__c</columns>
        <columns>Type_of_Injury__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Wave__c</field>
            <operation>equals</operation>
            <value>CHIW 5</value>
        </filters>
        <label>CHIW W5 Incidents</label>
        <sharedTo>
            <group>CHIW</group>
            <group>ProgSPT</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>CHIW_W6_Incidents</fullName>
        <columns>Description_of_incident__c</columns>
        <columns>Name_of_person_who_recorded_this__c</columns>
        <columns>NAME</columns>
        <columns>OBJECT_ID</columns>
        <columns>Dangerous_accident__c</columns>
        <columns>Date_of_incident__c</columns>
        <columns>Incident_notes__c</columns>
        <columns>Were_the_emergency_services_called__c</columns>
        <columns>Type_of_Injury__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Wave__c</field>
            <operation>equals</operation>
            <value>CHIW 6</value>
        </filters>
        <label>CHIW W6 Incidents</label>
        <sharedTo>
            <group>CHIW</group>
            <group>ProgSPT</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>CHIW_W7_Incidents</fullName>
        <columns>Description_of_incident__c</columns>
        <columns>Name_of_person_who_recorded_this__c</columns>
        <columns>NAME</columns>
        <columns>OBJECT_ID</columns>
        <columns>Dangerous_accident__c</columns>
        <columns>Date_of_incident__c</columns>
        <columns>Incident_notes__c</columns>
        <columns>Were_the_emergency_services_called__c</columns>
        <columns>Type_of_Injury__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Wave__c</field>
            <operation>equals</operation>
            <value>CHIW 7</value>
        </filters>
        <label>CHIW W7 Incidents</label>
        <sharedTo>
            <group>CHIW</group>
            <group>ProgSPT</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>CHIW_W8_Incidents1</fullName>
        <columns>Description_of_incident__c</columns>
        <columns>Name_of_person_who_recorded_this__c</columns>
        <columns>NAME</columns>
        <columns>OBJECT_ID</columns>
        <columns>Dangerous_accident__c</columns>
        <columns>Date_of_incident__c</columns>
        <columns>Incident_notes__c</columns>
        <columns>Were_the_emergency_services_called__c</columns>
        <columns>Type_of_Injury__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Wave__c</field>
            <operation>equals</operation>
            <value>CHIW 8</value>
        </filters>
        <label>CHIW W8 Incidents</label>
        <sharedTo>
            <group>CHIW</group>
            <group>ProgSPT</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>CHIW_W9_Incidents</fullName>
        <columns>Description_of_incident__c</columns>
        <columns>Name_of_person_who_recorded_this__c</columns>
        <columns>NAME</columns>
        <columns>OBJECT_ID</columns>
        <columns>Dangerous_accident__c</columns>
        <columns>Date_of_incident__c</columns>
        <columns>Incident_notes__c</columns>
        <columns>Were_the_emergency_services_called__c</columns>
        <columns>Type_of_Injury__c</columns>
        <columns>Card_type__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Wave__c</field>
            <operation>equals</operation>
            <value>CHIW 9</value>
        </filters>
        <label>CHIW W9 Incidents</label>
        <sharedTo>
            <group>CHIW</group>
            <group>ProgSPT</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>CaW_W1_Incidents</fullName>
        <columns>Description_of_incident__c</columns>
        <columns>Name_of_person_who_recorded_this__c</columns>
        <columns>NAME</columns>
        <columns>OBJECT_ID</columns>
        <columns>Dangerous_accident__c</columns>
        <columns>Date_of_incident__c</columns>
        <columns>Incident_notes__c</columns>
        <columns>Were_the_emergency_services_called__c</columns>
        <columns>Type_of_Injury__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Wave__c</field>
            <operation>equals</operation>
            <value>CaW 1</value>
        </filters>
        <label>CaW W1 Incidents</label>
        <sharedTo>
            <group>CHIW</group>
            <group>ProgSPT</group>
        </sharedTo>
    </listViews>
    <nameField>
        <displayFormat>I-{00000}</displayFormat>
        <label>Incident Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Incidents</pluralLabel>
    <recordTypes>
        <fullName>Behaviour</fullName>
        <active>true</active>
        <description>Use this to record incidents involving inappropriate behaviour and yellow/red cards awarded</description>
        <label>Behaviour</label>
    </recordTypes>
    <recordTypes>
        <fullName>Damage_to_property</fullName>
        <active>true</active>
        <description>Use this to record incidents involving damage to property</description>
        <label>Damage to property</label>
    </recordTypes>
    <recordTypes>
        <fullName>Data_Loss</fullName>
        <active>true</active>
        <label>Data Loss</label>
    </recordTypes>
    <recordTypes>
        <fullName>Disclosures_and_safeguarding</fullName>
        <active>true</active>
        <label>Disclosures and safeguarding</label>
    </recordTypes>
    <recordTypes>
        <fullName>Health_and_safety</fullName>
        <active>true</active>
        <description>Use this to record accidents and illnesses for YPs</description>
        <label>Health and safety</label>
    </recordTypes>
    <recordTypes>
        <fullName>Lost_Medical_Forms</fullName>
        <active>true</active>
        <description>Use this to record when an incident affects a whole wave, eg medical forms are lost</description>
        <label>Whole Wave Incident</label>
    </recordTypes>
    <recordTypes>
        <fullName>Misc_Incident</fullName>
        <active>true</active>
        <description>Catch-all record type for incidents that do not fit in the other categories</description>
        <label>Misc Incident</label>
    </recordTypes>
    <recordTypes>
        <fullName>Staff_Health</fullName>
        <active>true</active>
        <description>Use this to record accidents and illnesses for summer staff</description>
        <label>Staff Health</label>
    </recordTypes>
    <recordTypes>
        <fullName>Started_but_left</fullName>
        <active>true</active>
        <description>Use this to record when a YP leaves the programme voluntarily or due to a red card</description>
        <label>Started but left</label>
    </recordTypes>
    <recordTypes>
        <fullName>TCS_Behaviour_card_awarded</fullName>
        <active>true</active>
        <description>Use this to record incidents involving inappropriate behaviour on a TCS Event</description>
        <label>TCS _ Behaviour (card awarded)</label>
    </recordTypes>
    <recordTypes>
        <fullName>TCS_Damage_to_property</fullName>
        <active>true</active>
        <description>When a YP causes damage to property on a TCS event</description>
        <label>TCS - Damage to property</label>
    </recordTypes>
    <recordTypes>
        <fullName>TCS_Health</fullName>
        <active>true</active>
        <description>When a health incident occurs for a YP on a TCS event</description>
        <label>TCS - Health</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>Card_Type_Awarded_Required_Fields</fullName>
        <active>false</active>
        <errorConditionFormula>AND(OR(
ISBLANK( Date_that_PL_was_informed__c), 
ISBLANK( Time_that_PL_was_informed__c ), 
ISBLANK( Date_that_PM_was_informed__c ),
ISBLANK( Time_that_PM_was_informed__c)), 
OR(ISPICKVAL( Card_type__c , &quot;Yellow&quot;),
ISPICKVAL(Card_type__c , &quot;Red (2nd yellow awarded)&quot;),
 ISPICKVAL(Card_type__c , &quot;Red&quot;)
)
)</errorConditionFormula>
        <errorMessage>You will not be able to save this unless you have filled in: Date that PL was informed; Time that PL was informed; Date that PM was informed; Time that PM was informed</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Date_YP_Left_must_be_null_unless</fullName>
        <active>true</active>
        <errorConditionFormula>OR(
	AND(
		OR(
			ISPICKVAL(  Card_type__c, &apos;Red (2nd yellow awarded)&apos;)
			,
			ISPICKVAL( Card_type__c, &apos;Red&apos;)
		)
		,
		ISNULL( Date_left_the_programme__c)
	)
	,
	AND(
		OR(
			ISPICKVAL(  Card_type__c, &apos;Yellow&apos;)
			,
			ISPICKVAL( Card_type__c, &apos;Warning&apos;)
			,
			ISPICKVAL( Card_type__c, &apos;Other&apos;)
		)
		,
		NOT( ISNULL( Date_left_the_programme__c))
	)
)</errorConditionFormula>
        <errorMessage>You must enter a date the YP left the programme if they received a red card and can not enter a date if they have not received a red card.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Document_must_be_uploaded_for_disclosure</fullName>
        <active>false</active>
        <errorConditionFormula>AND( RecordTypeId = &apos;012C0000000QUKI&apos;,   ISBLANK( Document_URL__c ))</errorConditionFormula>
        <errorMessage>You must input a valid Document URL for disclosure incidents.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Highly_severe_incident_need_explanation</fullName>
        <active>true</active>
        <description>If the Severity of an incident is &apos;Major&apos; then an explanation of the</description>
        <errorConditionFormula>AND((ISPICKVAL( Severity_of_Injury__c ,&quot;Major (Person sent to Hospital)&quot;)),ISBLANK( Description_of_incident__c ))</errorConditionFormula>
        <errorMessage>Please enter a description of the Incident</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Mental_Health_Incident</fullName>
        <active>true</active>
        <description>Delivery staff need to tick any one one the fields: Safeguarding and Disclosure or Mental Health or both</description>
        <errorConditionFormula>AND( RecordType.Id = &quot;012C0000000QUKI&quot;,Safeguarding_and_Disclosure__c = false,  Mental_Health__c  = False)</errorConditionFormula>
        <errorMessage>Please tick any one or both of the following boxes in the information section: Safeguarding/Disclosure AND/OR Mental Health?</errorMessage>
    </validationRules>
</CustomObject>